[fixed] overflow issue

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -10,6 +10,8 @@ body {
   height: 100%;
   width: 100%;
   font-family: 'VT323', monospace;
+  margin: 0px;
+  overflow: hidden;
 }
 
 .container {
